--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https:/Diegoag.github.io/cotizador-dolar",
+  "homepage": "https://diegoagf.github.io/cotizador-dolar",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
